--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "twinit": "tailwindcss init -p"
   },
   "dependencies": {
+    "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
